Fix vertical alignment of topbar clear button (#1197)

--- a/src/scss/includes/search_form.scss
+++ b/src/scss/includes/search_form.scss
@@ -94,6 +94,7 @@ input[type="search"] {
   width: 30px;
   color: $secondary_text;
   cursor: pointer;
+  line-height: initial;
   display: none;
 }
 
